audio/video output pause regressions

Because Decoder_UpdateOutState() is piggy backed on the decoder format updates, it ignores pause signal:

  • until next format update, and/or,
  • until next decoded block

-> Unable to pause display/subtitles if there's nothing being decoded.

-> Unable to pause display/subtitles if there's no format update.

-> Pause is delayed by decoder fifo.

refs #28429 (closed)

Edited by François Cartegnie