decoder: add missing Decoder_UpdateOutState() when spu is started

Like it is already done for vout and aout.

Refs #28446
Refs #28429